@@ -37,6 +37,7 @@ Cacti CHANGELOG
 -bug#0000966: Log file viewing utility has no ability to filter
 -bug#0000969: In some versions of PHP, the graph tree will not view properly
 -bug#0000970: Incorrect debug messages in lib/ping.php for failed UDP ping
+-bug#0000982: Remove invalid references to the "output_string" column in the "data_input" table
 -bug#0000984: Poller does not correctly flush poller_output table after a memory error
 -bug: ss_sql.php causes the script server to crash
 -bug: Timeshifter added to base code.
